edit processing code snippet

--- a/notebooks/vcf-analyses.ipynb
+++ b/notebooks/vcf-analyses.ipynb
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -595,6 +595,7 @@
     "\n",
     "if [ -f merged.MN.TUM.vcf.gz ]; then\n",
     "\trm tmp/*\n",
+    "\trm merged.MN.TUM.vcf.gz\n",
     "fi\n",
     "\n"
    ]
